[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "infinite-website"
version = "0.0.1"
description = "User-directed self-updating website"
requires-python = ">=3.11"
dependencies = [
  "alembic==1.14.0",
  "anthropic==0.43.0",
  "asyncpg==0.30.0",
  "quart==0.20.0",
  "mypy==1.14.1",
  "psycopg2-binary==2.9.10",
  "sqlalchemy[asyncio]==2.0.37",
  "sqlmodel==0.0.22",
]
