[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "infinite-website"
version = "0.0.1"
description = "User-directed self-updating website"
requires-python = ">=3.11"
dependencies = [
  "alembic==1.14.0",
  "anthropic==0.49.0",
  "asyncpg==0.30.0",
  "boto3==1.36.8",
  "quart==0.20.0",
  "mypy==1.14.1",
  "psycopg2-binary==2.9.10",
  "sqlalchemy[asyncio]==2.0.37",
  "sqlmodel==0.0.22",
  "types-boto3==1.36.8",
]
